# agg-2.6

./: .gitattributes  README.md
agg-2.4/: AggConfig.cmake.in  CMakeLists.txt  Makefile  UseAgg.cmake.in  cmake_install.html  vuhung-test-write-access.txt
agg-2.4/agg2d/: agg2d.cpp  agg2d.h
agg-2.4/agg2d/Demo/: agg2d_demo.cpp  agg2d_demo.sln  agg2d_demo.vcxproj
agg-2.4/examples/: CMakeLists.txt  Makefile.am  aa_demo.cpp  aa_test.cpp  agg2d_demo.cpp  alpha_gradient.cpp  alpha_mask.cpp  alpha_mask2.cpp  alpha_mask3.cpp  bezier_div.cpp  blend_color.cpp  blur.cpp  bspline.cpp  circles.cpp  component_rendering.cpp  compositing.cpp  compositing2.cpp  conv_contour.cpp  conv_dash_marker.cpp  conv_stroke.cpp  distortions.cpp  flash_rasterizer.cpp  flash_rasterizer2.cpp  freetype_test.cpp  gamma_correction.cpp  gamma_ctrl.cpp  gamma_tuner.cpp  gouraud.cpp  gouraud_mesh.cpp  gpc_test.cpp  gradient_focal.cpp  gradients.cpp  gradients_contour.cpp  graph_test.cpp  idea.cpp  image1.cpp  image_alpha.cpp  image_filters.cpp  image_filters2.cpp  image_fltr_graph.cpp  (+36 more)
agg-2.4/examples/BeOS/: Makefile  readme.txt
agg-2.4/examples/X11/: Makefile  readme.txt
agg-2.4/examples/macosx_carbon/: Makefile  readme.txt
agg-2.4/examples/macosx_sdl/: Makefile  readme.txt
agg-2.4/examples/svg_viewer/: agg_svg_exception.h  agg_svg_parser.cpp  agg_svg_parser.h  agg_svg_path_renderer.cpp  agg_svg_path_renderer.h  agg_svg_path_tokenizer.cpp  agg_svg_path_tokenizer.h  svg_test.cpp
agg-2.4/examples/win32_api/: Makefile  examples.sln
agg-2.4/examples/win32_api/aa_demo/: Makefile  aa_demo.dsp  aa_demo.dsw  aa_demo.vcxproj
agg-2.4/examples/win32_api/aa_test/: Makefile  aa_test.dsp  aa_test.dsw  aa_test.vcxproj
agg-2.4/examples/win32_api/alpha_gradient/: Makefile  alpha_gradient.dsp  alpha_gradient.dsw  alpha_gradient.vcxproj
agg-2.4/examples/win32_api/alpha_mask/: Makefile  alpha_mask.dsp  alpha_mask.dsw  alpha_mask.vcxproj
agg-2.4/examples/win32_api/alpha_mask2/: Makefile  alpha_mask2.dsp  alpha_mask2.dsw  alpha_mask2.vcxproj
agg-2.4/examples/win32_api/alpha_mask3/: Makefile  alpha_mask3.dsp  alpha_mask3.dsw  alpha_mask3.vcxproj
agg-2.4/examples/win32_api/bezier_div/: Makefile  bezier_div.dsp  bezier_div.dsw  bezier_div.vcxproj
agg-2.4/examples/win32_api/blend_color/: Makefile  blend_color.dsp  blend_color.dsw  blend_color.vcxproj
agg-2.4/examples/win32_api/blur/: Makefile  blur.dsp  blur.dsw  blur.vcxproj
agg-2.4/examples/win32_api/blur VS2005/: blur.vcxproj
agg-2.4/examples/win32_api_dmc/: Makefile  readme
agg-2.4/font_freetype/: agg_font_freetype2.cpp
agg-2.4/include/: agg_array.h  agg_basics.h  agg_blur.h  agg_color_gray.h  agg_color_rgba.h  agg_gamma_functions.h  agg_gamma_lut.h  agg_image_accessors.h  agg_pixel_formats.h  agg_pixfmt_base.h  agg_pixfmt_gray.h  agg_pixfmt_rgb.h  agg_pixfmt_rgb_packed.h  agg_pixfmt_rgba.h  agg_pixfmt_rgbx.h  agg_rasterizer_cells_aa.h  agg_rasterizer_compound_aa.h  agg_rasterizer_scanline_aa_nogamma.h  agg_renderer_outline_image.h  agg_span_gradient_contour.h  agg_span_image_filter_gray.h  agg_span_image_filter_rgba.h
agg-2.4/include/platform/: agg_platform_support.h
agg-2.4/include/util/: agg_color_conv.h
agg-2.4/myapp/: CMakeLists.txt.in  myproject.cmake
agg-2.4/src/: CMakeLists.txt  Makefile
agg-2.4/src/ctrl/: agg_scale_ctrl.cpp
agg-doc/: agg.styles.css  index.html
agg-src/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile.in.Darwin  Makefile.in.Darwin.SDL  Makefile.in.Darwin.SDL2  Makefile.in.Darwin.nano-X  Makefile.in.Linux.SDL2  Makefile.in.Linux.nano-X  README.md  conanfile.py
agg-src/agg2d/: CMakeLists.txt
agg-src/examples/: CMakeLists.txt  aa_demo.cpp  alpha_mask.cpp  bezier_div.cpp  component_rendering.cpp  compositing.cpp  compositing2.cpp  conv_dash_marker.cpp  image_resample.cpp  interactive_polygon.cpp  line_patterns.cpp  line_patterns_clip.cpp  lion_lens.cpp  lion_outline.cpp  make_gb_poly.cpp  mol_view.cpp  multi_clip.cpp  parse_lion.cpp  pattern_fill.cpp  pattern_perspective.cpp  perspective.cpp  polymorphic_renderer.cpp  raster_text.cpp  rasterizer_compound.cpp  scanline_boolean2.cpp  simple_blur.cpp
agg-src/examples/SDL2/: Makefile  readme.txt  shapes.txt
agg-src/examples/X11/: 1.ppm  1.sdf  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  8.ppm  9.ppm  Makefile
agg-src/examples/nano-X/: 1.ppm  1.sdf  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  8.ppm  9.ppm  Makefile  agg.ppm  compositing.ppm  readme.txt  runapp  spheres.ppm
agg-src/examples/svg_viewer/: agg_svg_parser.cpp
agg-src/font_freetype/: agg_font_freetype.cpp  agg_font_freetype.h  agg_font_freetype2.cpp  agg_font_freetype2.h
agg-src/font_win32_tt/: agg_font_win32_tt.h
agg-src/include/: agg_arc.h  agg_arrowhead.h  agg_bezier_arc.h  agg_bspline.h  agg_color_rgba.h  agg_gsv_text.h  agg_renderer_outline_aa.h  agg_rounded_rect.h  agg_scanline_boolean_algebra.h  agg_trans_double_path.h  agg_vcgen_bspline.h  agg_vcgen_contour.h  agg_vcgen_dash.h  agg_vcgen_smooth_poly1.h  agg_vpgen_clip_polygon.h
agg-src/include/ctrl/: agg_bezier_ctrl.h  agg_cbox_ctrl.h  agg_gamma_ctrl.h  agg_gamma_spline.h  agg_rbox_ctrl.h  agg_scale_ctrl.h  agg_slider_ctrl.h  agg_spline_ctrl.h
agg-src/include/platform/: agg_platform_support.h
agg-src/myapp/: CMakeLists.txt
agg-src/src/: CMakeLists.txt  agg_arc.cpp  agg_arrowhead.cpp  agg_bezier_arc.cpp  agg_bspline.cpp  agg_color_rgba.cpp  agg_curves.cpp  agg_embedded_raster_fonts.cpp  agg_gsv_text.cpp  agg_image_filters.cpp  agg_line_aa_basics.cpp  agg_line_profile_aa.cpp  agg_rounded_rect.cpp  agg_trans_affine.cpp  agg_trans_double_path.cpp  agg_trans_single_path.cpp  agg_trans_warp_magnifier.cpp  agg_vcgen_bspline.cpp  agg_vcgen_contour.cpp  agg_vcgen_dash.cpp  agg_vcgen_markers_term.cpp  agg_vcgen_smooth_poly1.cpp  agg_vcgen_stroke.cpp  agg_vpgen_clip_polygon.cpp  agg_vpgen_clip_polyline.cpp  agg_vpgen_segmentator.cpp
agg-src/src/ctrl/: agg_bezier_ctrl.cpp  agg_cbox_ctrl.cpp  agg_gamma_ctrl.cpp  agg_gamma_spline.cpp  agg_polygon_ctrl.cpp  agg_rbox_ctrl.cpp  agg_scale_ctrl.cpp  agg_slider_ctrl.cpp  agg_spline_ctrl.cpp
(+472 files in other folders)
